# medical-data-analysis-assistant

./: .gitignore  README.md  docker-compose.yml
backend/: .bedrock_agentcore.yaml  .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/.bedrock_agentcore/app_agent_entrypoint/: dependencies.hash
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  agent.py  config.py  entrypoint.py  mcp_integration.py  prompts.py
backend/app/api/v1/: analysis.py  auth.py  chat.py  data.py  literature.py  reports.py  translation.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/middleware/: __init__.py  access_control.py  auth.py
backend/app/models/: __init__.py  analysis.py  base.py  chat.py  data.py  literature.py  report.py  translation.py  user.py
backend/app/schemas/: analysis.py  auth.py  chat.py  data.py  literature.py  reports.py  translation.py
backend/app/services/: agentcore_client.py  data_parser.py  s3_client.py
backend/tests/: conftest.py  test_access_control.py  test_agent_config.py  test_agentcore.py  test_analysis.py  test_auth.py  test_chat.py  test_data_parser.py  test_data_upload.py  test_literature.py  test_mcp_integration.py  test_property_chat_context.py  test_property_column_type.py  test_property_data_isolation.py  test_property_data_preview.py  test_property_data_roundtrip.py  test_property_email_validation.py  test_property_file_format.py  test_property_file_size.py  test_property_password_complexity.py  test_property_password_hashing.py  test_property_quality_summary.py  test_property_search_sorting.py  test_property_source_filter.py  test_reports.py  test_translation.py
docs/: DEPLOYMENT.md  architecture.md  mcp-integration.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.js  App.tsx  router.js  router.tsx
frontend/src/config/: navigation.js  navigation.tsx
frontend/src/hooks/: useConfirm.js  useConfirm.ts  useNotify.js  useNotify.ts  useResponsive.js  useResponsive.ts
frontend/src/pages/: Placeholder.js  Placeholder.tsx
frontend/src/services/: analysisService.js  analysisService.ts  apiClient.js  apiClient.ts  authService.js  authService.ts  chatService.js  chatService.ts  dataService.js  dataService.ts  literatureService.js  literatureService.ts  reportsService.js  reportsService.ts  tokenStorage.js  tokenStorage.ts  translationService.js  translationService.ts
frontend/src/stores/: authStore.js  authStore.ts  literatureReferenceStore.ts  themeStore.js  themeStore.ts
frontend/src/styles/: global.css
frontend/src/theme/: themeConfig.js  themeConfig.ts  tokens.js  tokens.ts
frontend/src/types/: analysis.js  analysis.ts  auth.js  auth.ts  chat.js  (+9 more)
infrastructure/: app.py
infrastructure/stacks/: __init__.py  cdn_stack.py  compute_stack.py  database_stack.py  network_stack.py  security_stack.py  storage_stack.py
mcp-servers/: .dockerignore  Dockerfile
mcp-servers/chart-generation/: __init__.py
mcp-servers/cnki-search/: __init__.py  pyproject.toml
mcp-servers/cnki-search/cnki_search/: __init__.py  __main__.py  client.py  models.py  server.py
mcp-servers/cnki-search/tests/: conftest.py  test_client.py  test_models.py  test_server.py
mcp-servers/report-generation/: pyproject.toml
mcp-servers/report-generation/report_generation/: __init__.py  __main__.py  builder.py  exporters.py  models.py  server.py  templates.py
mcp-servers/report-generation/tests/: conftest.py  test_builder.py  test_exporters.py  test_server.py  test_templates.py
(+114 files in other folders)
