[project]
name = "medical-data-analysis-assistant-backend"
version = "0.1.0"
description = "Medical Data Analysis Assistant - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy>=2.0.36",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "psycopg2-binary==2.9.10",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.19",
    "boto3>=1.35.81",
    "redis==5.2.1",
    "httpx==0.28.1",
    "strands-agents>=1.0.0",
    "mcp>=1.0.0",
    # Self-developed MCP server dependencies (bundled in backend image).
    "jinja2>=3.1.4",
    "weasyprint>=63.0",
    "python-docx>=1.1.2",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "hypothesis==6.119.3",
    "httpx==0.28.1",
    "ruff==0.8.3",
]
# Open-source MCP servers the Agent orchestrates over stdio (task 15.2).
# Kept out of the core runtime deps so test runs are not forced to install them.
# Launched per design.md; postgres-mcp-server runs via `npx` (no pip dep here).
#   pubmed-mcp-server      : https://github.com/JackKuo666/pubmed-mcp-server
#   markitdown[all]        : https://github.com/microsoft/markitdown
#   pandas-mcp             : https://github.com/QuantGeekDev/pandas-mcp
#   awslabs-s3-mcp-server  : https://github.com/awslabs/mcp
mcp-servers = [
    "pubmed-mcp-server>=0.1.0",
    "markitdown[all]>=0.0.1",
    "pandas-mcp>=0.1.0",
    "awslabs-s3-mcp-server>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
