[project]
name = "cnki-search-mcp"
version = "0.1.0"
description = "Medical Data Analysis Assistant - CNKI (China National Knowledge Infrastructure) literature search MCP Server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "hypothesis==6.119.3",
    "ruff==0.8.3",
]

[project.scripts]
cnki-search-mcp = "cnki_search.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cnki_search"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
