[project]
name = "report-generation-mcp"
version = "0.1.0"
description = "Medical Data Analysis Assistant - Report Generation MCP Server (structured report content + PDF/Word export)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "jinja2>=3.1.4",
    "weasyprint>=63.0",
    "python-docx>=1.1.2",
    "boto3==1.35.81",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "hypothesis==6.119.3",
    "ruff==0.8.3",
]

[project.scripts]
report-generation-mcp = "report_generation.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["report_generation"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
